# timefairy

./: .dockerignore  .env.example  .gitignore  Cargo.toml  README.md  devbox.json  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml  process-compose.yaml
apps/api/: Dockerfile  docker-entrypoint.sh  package.json  prisma.config.ts  tsconfig.json
apps/api/prisma/: schema.prisma  seed.js  seed.ts
apps/api/src/: app.module.ts  main.ts
apps/api/src/auth/: auth.controller.ts  auth.dto.ts  auth.module.ts  auth.service.ts  jwt.strategy.ts  work-hours.dto.ts
apps/api/src/clients/: clients.controller.ts  clients.dto.ts  clients.service.ts
apps/api/src/common/: decorators.ts  lanes-helper.service.ts  roles.guard.ts
apps/api/src/day-logs/: day-logs.controller.ts  day-logs.dto.ts  day-logs.module.ts  day-logs.service.ts
apps/api/src/health/: health.controller.ts
apps/api/src/lanes/: lanes.controller.ts  lanes.dto.ts  lanes.module.ts  lanes.service.ts
apps/api/src/projects/: projects.controller.ts  projects.dto.ts  projects.service.ts
apps/desktop/: README.md  package.json
apps/mobile/: README.md  package.json
apps/web/: Dockerfile  index.html  nginx.conf  package.json  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  index.css  main.tsx
crates/cli/: Cargo.toml
crates/cli/src/: entry.rs  main.rs  reference.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  credentials.rs  lib.rs
docs/: deployment.md
scripts/: deploy-pack.sh  deploy-push.sh  dev-local-api.sh  setup-local-postgres.sh
(+140 files in other folders)
